rm SERVICE_WORKER_PATH & SERVICE_WORKER_PARAM
Removing support for these and will be instruct developer to use
serviceWorkerParam and serviceWorkerPath as part of the migration
process

--- a/express_webpack/amp/index.html
+++ b/express_webpack/amp/index.html
@@ -21,10 +21,11 @@
     const appId = getUrlQueryParam('app_id');
     var OneSignal = window.OneSignal || [];
     OneSignal.push(function() {
-      OneSignal.SERVICE_WORKER_PARAM = { scope: "/" + SERVICE_WORKER_PATH };
-      OneSignal.SERVICE_WORKER_PATH = SERVICE_WORKER_PATH + "OneSignalSDKWorker.js";
-
-      OneSignal.init({ appId });
+      OneSignal.init({ 
+        appId,
+        serviceWorkerParam: { scope: "/" + SERVICE_WORKER_PATH },
+        serviceWorkerPath: SERVICE_WORKER_PATH + "OneSignalSDKWorker.js",
+      });
     });
   </script>
 <head>
