OneSignalDeferred basic impl
This switches the public API from OneSignal to OneSignalDeferred being
deferred list of functions to run.

The new OneSignalDeferred API now only accepts a function as parameter
to push(). Also this function will provide a instance of OneSignal.

This commit also updates the example pages and confirmed it works. More
clean up will be done in future commits as part of the same PR.

--- a/express_webpack/amp/index.html
+++ b/express_webpack/amp/index.html
@@ -19,9 +19,9 @@
     }
 
     const appId = getUrlQueryParam('app_id');
-    var OneSignal = window.OneSignal || [];
-    OneSignal.push(function() {
-      OneSignal.init({ 
+    var OneSignalDeferred = window.OneSignalDeferred || [];
+    OneSignalDeferred.push(function(onesignal) {
+      onesignal.init({ 
         appId,
         serviceWorkerParam: { scope: "/" + SERVICE_WORKER_PATH },
         serviceWorkerPath: SERVICE_WORKER_PATH + "OneSignalSDKWorker.js",
