--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -29,9 +29,9 @@
     }
 
     const appId = getUrlQueryParam('app_id');
-    var OneSignal = window.OneSignal || [];
-    OneSignal.push(function() {
-      OneSignal.init({
+    var OneSignalDeferred = window.OneSignalDeferred || [];
+    OneSignalDeferred.push(function(onesignal) {
+       onesignal.init({
           appId,
           serviceWorkerParam: { scope: "/" + SERVICE_WORKER_PATH },
           serviceWorkerPath: SERVICE_WORKER_PATH + "OneSignalSDKWorker.js",
@@ -108,48 +108,48 @@
     });
 
     function sendUniqueOutcome() {
-        OneSignal.push(function() {
+        OneSignalDeferred.push(function(onesignal) {
             const outcomeName = document.querySelector('#unique_outcome_name').value;
-            OneSignal.sendUniqueOutcome(outcomeName);
+            onesignal.sendUniqueOutcome(outcomeName);
         });
     }
 
     function sendOutcome() {
-        OneSignal.push(function() {
+        OneSignalDeferred.push(function(onesignal) {
             const outcomeName = document.querySelector('#outcome_name').value;
-            OneSignal.sendOutcome(outcomeName);
+            onesignal.sendOutcome(outcomeName);
         });
     }
 
     function sendOutcomeWithWeight() {
-        OneSignal.push(function() {
+        OneSignalDeferred.push(function(onesignal) {
             const outcomeName = document.querySelector('#outcome_name').value;
             const outcomeWeight = parseFloat(document.querySelector('#outcome_weight').value);
-            OneSignal.sendOutcome(outcomeName, outcomeWeight);
+            onesignal.sendOutcome(outcomeName, outcomeWeight);
         });
     }
 
     function showCategorySlidedown() {
-        OneSignal.push(function() {
-            OneSignal.showCategorySlidedown();
+        OneSignalDeferred.push(function(onesignal) {
+            onesignal.showCategorySlidedown();
         })
     }
 
     function showSmsSlidedown() {
-        OneSignal.push(function() {
-            OneSignal.showSmsSlidedown();
+        OneSignalDeferred.push(function(onesignal) {
+            onesignal.showSmsSlidedown();
         })
     }
 
     function showEmailSlidedown() {
-        OneSignal.push(function() {
-            OneSignal.showEmailSlidedown();
+        OneSignalDeferred.push(function(onesignal) {
+            onesignal.showEmailSlidedown();
         })
     }
 
     function showSmsAndEmailSlidedown() {
-        OneSignal.push(function() {
-            OneSignal.showSmsAndEmailSlidedown();
+        OneSignalDeferred.push(function(onesignal) {
+            onesignal.showSmsAndEmailSlidedown();
         })
     }
 
