rename OneSignalSDKWorker.js to the new standard
Rename OneSignalSDKWorker.js to OneSignalSDK.sw.js

--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -34,7 +34,7 @@
        onesignal.init({
           appId,
           serviceWorkerParam: { scope: "/" + SERVICE_WORKER_PATH },
-          serviceWorkerPath: SERVICE_WORKER_PATH + "OneSignalSDKWorker.js",
+          serviceWorkerPath: SERVICE_WORKER_PATH + "OneSignalSDK.sw.js",
           notifyButton: {
               enable: true
           },
