--- a/express_webpack/amp/index.html
+++ b/express_webpack/amp/index.html
@@ -24,7 +24,7 @@
       onesignal.init({ 
         appId,
         serviceWorkerParam: { scope: "/" + SERVICE_WORKER_PATH },
-        serviceWorkerPath: SERVICE_WORKER_PATH + "OneSignalSDKWorker.js",
+        serviceWorkerPath: SERVICE_WORKER_PATH + "OneSignalSDK.sw.js",
       });
     });
   </script>
@@ -105,7 +105,7 @@
     const ampWebPushElement = document.getElementById("amp-web-push");
     ampWebPushElement.setAttribute("helper-iframe-url", "https://localhost:4001/amp/amp-helper-frame.html?appId=" + appId);;
     ampWebPushElement.setAttribute("permission-dialog-url", "https://localhost:4001/amp/amp-permission-dialog.html?appId=" + appId);
-    ampWebPushElement.setAttribute("service-worker-url", "https://localhost:4001/amp/OneSignalSDKWorker.js?appId=" + appId);
+    ampWebPushElement.setAttribute("service-worker-url", "https://localhost:4001/amp/OneSignalSDK.sw.js?appId=" + appId);
   </script>
 
   <!-- Contents -->
