Add web/v16 to path
This is to group files by type and major version.

Didn't update amp yet as we will address this post alpha.

--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -7,7 +7,7 @@
     Ensure OneSignal SDK correctly handles this. -->
 <!-- NOTE: This does not work with the relative pathed manifest.json above. -->
 <!--<base href="https://www.example.com/"> -->
-<script src="sdks/Dev-OneSignalSDK.page.js" defer></script>
+<script src="sdks/web/v16/Dev-OneSignalSDK.page.js" defer></script>
 <script>
     // NOTE: Uncomment and open site in Safari on macOS 13+ to simulate
     // a similar JS API as an iOS 16.4 WebApp.
