Update Web Sandbox index.html
To use new User Model methods

--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -14,6 +14,7 @@
     // window.safari = undefined;
 
     const SERVICE_WORKER_PATH = "push/onesignal/";
+    let showEventAlertToggleSetting = false;
 
     function getUrlQueryParam(name) {
         var url = window.location.href;
@@ -30,8 +31,8 @@
 
     const appId = getUrlQueryParam('app_id');
     var OneSignalDeferred = window.OneSignalDeferred || [];
-    OneSignalDeferred.push(function(onesignal) {
-       onesignal.init({
+    OneSignalDeferred.push(async function(onesignal) {
+      await onesignal.init({
           appId,
           serviceWorkerParam: { scope: "/" + SERVICE_WORKER_PATH },
           serviceWorkerPath: SERVICE_WORKER_PATH + "OneSignalSDK.sw.js",
@@ -42,7 +43,7 @@
               slidedown: {
                   prompts: [{
                     type: "category",
-                    autoPrompt: true,
+                    autoPrompt: false,
                     categories: [
                             {
                                 tag: "politics",
@@ -79,13 +80,16 @@
                         ]
                   },
                   {
-                      type: "sms"
+                      type: "sms",
+                      autoPrompt: false
                   },
                   {
-                      type: "email"
+                      type: "email",
+                      autoPrompt: false
                   },
                   {
-                      type: "smsAndEmail"
+                      type: "smsAndEmail",
+                      autoPrompt: false
                   }]
               },
               customlink: {
@@ -105,19 +109,73 @@
               }
           }
         });
+        onesignal.User.PushSubscription.addEventListener('subscriptionChange', function (event) {
+          showEventAlert('subscriptionChange', { event });
+        });
     });
+
+    /* E V E N T   L I S T E N E R S */
+    OneSignalDeferred.push(function(onesignal) {
+      onesignal.Notifications.addEventListener('permissionChange', function (isSubscribed) {
+        showEventAlert('permissionChange', { isSubscribed });
+      });
+    });
+
+    OneSignalDeferred.push(function(onesignal) {
+      onesignal.Notifications.addEventListener('permissionPromptDisplay', function (event) {
+        showEventAlert('permissionPromptDisplay', { event });
+      });
+    });
+
+    OneSignalDeferred.push(function(onesignal) {
+      onesignal.Notifications.addEventListener('dismiss', function (event) {
+        showEventAlert('dismiss', { event });
+      });
+    });
+
+    OneSignalDeferred.push(function(onesignal) {
+      onesignal.Notifications.addEventListener('willDisplay', function (event) {
+        showEventAlert('willDisplay', { event });
+      });
+    });
+
+    OneSignalDeferred.push(function(onesignal) {
+      onesignal.Notifications.addEventListener('click', function (event) {
+        showEventAlert('click', { event });
+      });
+    });
+
+    OneSignalDeferred.push(function(onesignal) {
+      onesignal.Slidedown.addEventListener('slidedownShown', function (event) {
+        showEventAlert('slidedownShown', { event });
+      });
+    });
+
+    /* H E L P E R S */
+
+    function toggleShowEventAlert() {
+      showEventAlertToggleSetting = !showEventAlertToggleSetting;
+      document.getElementById('showEventAlertToggleSetting').innerText = showEventAlertToggleSetting ? 'true' : 'false';
+    }
+
+    function showEventAlert(eventName, payload) {
+      if (!showEventAlertToggleSetting) {
+        return;
+      }
+      alert(`OneSignal event ${eventName} fired!\n\nPayload:\n${JSON.stringify(payload, null, 2)}`);
+    }
 
     function sendUniqueOutcome() {
         OneSignalDeferred.push(function(onesignal) {
             const outcomeName = document.querySelector('#unique_outcome_name').value;
-            onesignal.sendUniqueOutcome(outcomeName);
+            onesignal.Session.sendUniqueOutcome(outcomeName);
         });
     }
 
     function sendOutcome() {
         OneSignalDeferred.push(function(onesignal) {
             const outcomeName = document.querySelector('#outcome_name').value;
-            onesignal.sendOutcome(outcomeName);
+            onesignal.Session.sendOutcome(outcomeName);
         });
     }
 
@@ -125,31 +183,31 @@
         OneSignalDeferred.push(function(onesignal) {
             const outcomeName = document.querySelector('#outcome_name').value;
             const outcomeWeight = parseFloat(document.querySelector('#outcome_weight').value);
-            onesignal.sendOutcome(outcomeName, outcomeWeight);
+            onesignal.Session.sendOutcome(outcomeName, outcomeWeight);
         });
     }
 
     function showCategorySlidedown() {
         OneSignalDeferred.push(function(onesignal) {
-            onesignal.showCategorySlidedown();
+            onesignal.Slidedown.promptPushCategories();
         })
     }
 
     function showSmsSlidedown() {
         OneSignalDeferred.push(function(onesignal) {
-            onesignal.showSmsSlidedown();
+            onesignal.Slidedown.promptSms();
         })
     }
 
     function showEmailSlidedown() {
         OneSignalDeferred.push(function(onesignal) {
-            onesignal.showEmailSlidedown();
+            onesignal.Slidedown.promptEmail();
         })
     }
 
     function showSmsAndEmailSlidedown() {
         OneSignalDeferred.push(function(onesignal) {
-            onesignal.showSmsAndEmailSlidedown();
+            onesignal.Slidedown.promptSmsAndEmail();
         })
     }
 
@@ -188,6 +246,9 @@
     <button onclick="javascript:showSmsSlidedown();">Show Sms Slidedown</button>
     <button onclick="javascript:showEmailSlidedown();">Show Email Slidedown</button>
     <button onclick="javascript:showSmsAndEmailSlidedown();">Show Sms & Email Slidedown</button>
+    <br />
+    <br />
+    <button onclick="javascript:toggleShowEventAlert();">Toggle show event alerts</button><p>Currently: <span id="showEventAlertToggleSetting">false</span></p>
     <br />
     <br />
     <div class='onesignal-customlink-container'></div>
