fix foregroundWillDisplay event in example

--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -124,8 +124,8 @@
     });
 
     OneSignalDeferred.push(function(onesignal) {
-      onesignal.Notifications.addEventListener('willDisplay', function (event) {
-        showEventAlert('willDisplay', { event });
+      onesignal.Notifications.addEventListener('foregroundWillDisplay', function (event) {
+        showEventAlert('foregroundWillDisplay', event);
       });
     });
 
