--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -149,6 +149,7 @@
     }
 
     function showEventAlert(eventName, payload) {
+      console.log(`OneSignal event ${eventName} fired!`, payload);
       if (!showEventAlertToggleSetting) {
         return;
       }
