--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -119,6 +119,12 @@
     });
 
     OneSignalDeferred.push(function(onesignal) {
+        onesignal.User.addEventListener('change', function (event) {
+          showEventAlert('change', { event });
+        });
+    });
+
+    OneSignalDeferred.push(function(onesignal) {
       onesignal.Notifications.addEventListener('permissionChange', function (isSubscribed) {
         showEventAlert('permissionChange', { isSubscribed });
       });
