add example to index.html

--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -41,6 +41,7 @@
           },
           serviceWorkerParam: { scope: '/' + SERVICE_WORKER_PATH },
           serviceWorkerPath: SERVICE_WORKER_PATH + 'OneSignalSDKWorker.js',
+          //serviceWorkerOverrideForTypical: true, // keep as example
           notifyButton: {
               enable: true
           },
