DO NOT MERGE quick and dirty test to see if prod build settings work
Run `npm run build:prod` and test out with express_webpack. Use this
commit to quickly test if changes you make the to project will work
with a full build of the SDK.

DO NOT MERGE THIS COMMIT

--- a/express_webpack/index.html
+++ b/express_webpack/index.html
@@ -28,7 +28,7 @@
       return urlParams.get(name);
     }
 
-    const appId = getUrlQueryParam('app_id');
+    const appId = getUrlQueryParam('app_id') || 'a3268fe7-cc94-4f25-ab09-867b957d7fe2';
     var OneSignalDeferred = window.OneSignalDeferred || [];
     OneSignalDeferred.push(async function (onesignal) {
       await onesignal.init({
