rename express folder to preview

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <script>
       window.OneSignalDeferred = [];
       window.OneSignalDeferred = window.OneSignalDeferred || [];
+
+      // set can a query param ?app_id=your_app_id OR
+      // create an .env file and set VITE_APP_ID to your app id
+      const appId = URLSearchParams.get('app_id') || '%VITE_APP_ID%';
+
       OneSignalDeferred.push(async function (OneSignal) {
         await OneSignal.init({
-          appId: '%VITE_APP_ID%', // add yours to .env.local\
+          appId,
         });
       });
     </script>
