address pr feedback

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>OneSignal Dev</title>
     <script>
-      window.OneSignalDeferred = [];
       window.OneSignalDeferred = window.OneSignalDeferred || [];
 
       // set can a query param ?app_id=your_app_id OR
@@ -24,6 +23,10 @@
   </head>
   <body>
     <script type="module" src="/src/entries/pageSdkInit.ts"></script>
-    <h1>One Signal Dev</h1>
+    <h1>OneSignal Dev</h1>
+    <p>
+      This html file is for local development with hot-reloading. To preview the
+      bundle, it will use a separate html file in the preview folder.
+    </p>
   </body>
 </html>
