add staging example

--- a/preview/index.html
+++ b/preview/index.html
@@ -9,6 +9,12 @@
   <!--<base href="https://www.example.com/"> -->
   <script src="sdks/web/v16/Dev-OneSignalSDK.page.js" defer></script>
 
+  <!-- If testing on staging, also manually change all OneSignalSDKWorker.js -->
+  <!-- <script
+    src="https://cdn.staging.onesignal.com/sdks/web/v16/Staging-OneSignalSDK.page.js"
+    defer
+  ></script> -->
+
   <script>
     // Example of a root service worker a site may have.
     // This is common for a PWA.
