Fix issue with logout called after init

--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
       This html file is for local development with hot-reloading. To preview the
       bundle, it will use a separate html file in the preview folder.
     </p>
+    <script>
+      // To check against race conditions
+      // OneSignalDeferred.push(async function (OneSignal) {
+      //   await OneSignal.logout();
+      // });
+    </script>
   </body>
 </html>
