update login logic to be similar to Android SDK

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           appId,
         });
       });
+      OneSignalDeferred.push(async function (OneSignal) {
+        await OneSignal.login('fadi-wsr');
+      });
     </script>
   </head>
   <body>
