fix properties logic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         });
       });
       OneSignalDeferred.push(async function (OneSignal) {
-        await OneSignal.login('fadi-wsr');
+        await OneSignal.login('fadi-here2');
       });
     </script>
   </head>
