--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           appId,
         });
       });
-      OneSignalDeferred.push(async function (OneSignal) {
-        await OneSignal.login('new-web-sdk');
-      });
+      // OneSignalDeferred.push(async function (OneSignal) {
+      //   await OneSignal.login('new-web-sdk');
+      // });
     </script>
   </head>
   <body>
