address pr comments

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           appId,
         });
       });
+
+      // uncomment to test login
       // OneSignalDeferred.push(async function (OneSignal) {
       //   await OneSignal.login('new-web-sdk');
       // });
