--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         });
       });
 
-      function pushSubscriptionChangeListener(event) {
-        console.warn('event.previous.id', event.previous.id);
-        console.warn('event.current.id', event.current.id);
-        console.warn('event.previous.token', event.previous.token);
-        console.warn('event.current.token', event.current.token);
-        console.warn('event.previous.optedIn', event.previous.optedIn);
-        console.warn('event.current.optedIn', event.current.optedIn);
-      }
+      // function pushSubscriptionChangeListener(event) {
+      //   console.warn('event.previous.id', event.previous.id);
+      //   console.warn('event.current.id', event.current.id);
+      //   console.warn('event.previous.token', event.previous.token);
+      //   console.warn('event.current.token', event.current.token);
+      //   console.warn('event.previous.optedIn', event.previous.optedIn);
+      //   console.warn('event.current.optedIn', event.current.optedIn);
+      // }
 
-      // uncomment to test push subscription change listener
+      // // uncomment to test push subscription change listener
       // OneSignalDeferred.push(function (OneSignal) {
       //   OneSignal.User.PushSubscription.addEventListener(
       //     'change',
