fix logic for input

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       OneSignalDeferred.push(async function (OneSignal) {
         await OneSignal.init({
           appId,
+          // promptOptions: {
+          //   slidedown: {
+          //     prompts: [
+          //       {
+          //         type: 'email',
+          //         // autoPrompt: false,
+          //       },
+          //     ],
+          //   },
+          // },
         });
       });
 
