remove stub dom environment

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       // uncomment to test login
       // OneSignalDeferred.push(async function (OneSignal) {
       //   await OneSignal.login('new-web-sdk');
+      //   OneSignal.User.addEmail('test@test.com');
       // });
     </script>
   </head>
