wait for user to provide consent before executing operations

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           //   },
           // },
         });
+
+        // for testing consent required
+        // OneSignal.setConsentRequired(true);
       });
 
       // function pushSubscriptionChangeListener(event) {
