--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
       window.OneSignalDeferred = window.OneSignalDeferred || [];
       OneSignalDeferred.push(async function (OneSignal) {
+        // for testing consent required
+        // OneSignal.setConsentRequired(true);
+
         await OneSignal.init({
           appId,
+          // requiresUserPrivacyConsent: true, // requires custom site sestting in dashboard
           // promptOptions: {
           //   slidedown: {
           //     prompts: [
@@ -28,7 +32,6 @@
           // },
         });
 
-        // for testing consent required
         // OneSignal.setConsentRequired(true);
       });
 
