--- a/index.html
+++ b/index.html
@@ -5,12 +5,102 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OneSignal Dev</title>
+    <style>
+      .in-app-notification {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+        padding: 16px 24px;
+        border-radius: 12px;
+        box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+        max-width: 350px;
+        z-index: 10000;
+        animation: slideIn 0.3s ease-out;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      }
+      .in-app-notification h4 {
+        margin: 0 0 8px 0;
+        font-size: 16px;
+      }
+      .in-app-notification p {
+        margin: 0;
+        font-size: 14px;
+        opacity: 0.9;
+      }
+      .in-app-notification .close-btn {
+        position: absolute;
+        top: 8px;
+        right: 12px;
+        background: none;
+        border: none;
+        color: white;
+        font-size: 20px;
+        cursor: pointer;
+        opacity: 0.7;
+      }
+      .in-app-notification .close-btn:hover {
+        opacity: 1;
+      }
+      @keyframes slideIn {
+        from { transform: translateX(100%); opacity: 0; }
+        to { transform: translateX(0); opacity: 1; }
+      }
+      .demo-section {
+        margin: 20px 0;
+        padding: 16px;
+        background: #f5f5f5;
+        border-radius: 8px;
+      }
+      .demo-section h3 {
+        margin-top: 0;
+      }
+      .toggle-btn {
+        padding: 10px 20px;
+        font-size: 14px;
+        cursor: pointer;
+        border: none;
+        border-radius: 6px;
+        margin-right: 10px;
+      }
+      .toggle-btn.active {
+        background: #667eea;
+        color: white;
+      }
+      .toggle-btn:not(.active) {
+        background: #ddd;
+        color: #333;
+      }
+    </style>
     <script>
       // set can a query param ?app_id=your_app_id OR
       // create an .env file and set VITE_APP_ID to your app id
       const appId =
         new URLSearchParams(window.location.search).get('app_id') ||
         '%VITE_APP_ID%';
+
+      // Track whether to suppress notifications when tab is focused
+      let suppressWhenFocused = false;
+
+      // In-app notification display function
+      function showInAppNotification(notification) {
+        // Remove existing in-app notification if any
+        const existing = document.querySelector('.in-app-notification');
+        if (existing) existing.remove();
+
+        const div = document.createElement('div');
+        div.className = 'in-app-notification';
+        div.innerHTML = `
+          <button class="close-btn" onclick="this.parentElement.remove()">&times;</button>
+          <h4>${notification.title || 'Notification'}</h4>
+          <p>${notification.body || ''}</p>
+        `;
+        document.body.appendChild(div);
+
+        // Auto-remove after 5 seconds
+        setTimeout(() => div.remove(), 5000);
+      }
 
       window.OneSignalDeferred = window.OneSignalDeferred || [];
       OneSignalDeferred.push(async function (OneSignal) {
@@ -30,6 +120,22 @@
           //     ],
           //   },
           // },
+        });
+
+        // Demo: foregroundWillDisplay with preventDefault()
+        // This allows suppressing system notifications when the tab is in focus
+        // and showing an in-app notification instead
+        OneSignal.Notifications.addEventListener('foregroundWillDisplay', (event) => {
+          console.log('[Demo] foregroundWillDisplay event received:', event);
+
+          // Check if we should suppress based on user toggle and page visibility
+          if (suppressWhenFocused && document.visibilityState === 'visible') {
+            console.log('[Demo] Preventing system notification, showing in-app instead');
+            event.preventDefault();
+            showInAppNotification(event.notification);
+          } else {
+            console.log('[Demo] Allowing system notification to display');
+          }
         });
 
         // OneSignal.setConsentRequired(true);
@@ -62,6 +168,13 @@
       //   await OneSignal.login('new-web-sdk');
       //   OneSignal.User.addEmail('test@test.com');
       // });
+
+      function toggleSuppressNotifications(enabled) {
+        suppressWhenFocused = enabled;
+        document.getElementById('btn-suppress-on').classList.toggle('active', enabled);
+        document.getElementById('btn-suppress-off').classList.toggle('active', !enabled);
+        console.log('[Demo] Suppress notifications when focused:', enabled);
+      }
     </script>
   </head>
   <body>
@@ -71,6 +184,32 @@
       This html file is for local development with hot-reloading. To preview the
       bundle, it will use a separate html file in the preview folder.
     </p>
+
+    <div class="demo-section">
+      <h3>Demo: Suppress Notifications When Tab is Focused</h3>
+      <p>
+        When enabled, push notifications will be suppressed when this tab is in focus.
+        Instead of a system notification, an in-app notification will be shown.
+      </p>
+      <p>
+        <strong>How to test:</strong>
+        <ol>
+          <li>Enable "Suppress when focused" below</li>
+          <li>Send a test push notification from your OneSignal dashboard</li>
+          <li>With this tab in focus, you'll see an in-app notification instead of a system notification</li>
+          <li>With this tab in background, you'll see a normal system notification</li>
+        </ol>
+      </p>
+      <div style="margin-top: 16px;">
+        <button id="btn-suppress-on" class="toggle-btn" onclick="toggleSuppressNotifications(true)">
+          Suppress when focused: ON
+        </button>
+        <button id="btn-suppress-off" class="toggle-btn active" onclick="toggleSuppressNotifications(false)">
+          Suppress when focused: OFF
+        </button>
+      </div>
+    </div>
+
     <script>
       // To check against race conditions
       // OneSignalDeferred.push(async function (OneSignal) {
